# libsl-public

./: CMakeLists.txt  Пояснительная записка.docx
examples/: AVLTreeArkTsFunSignatures.lsl  automatonConcepts.lsl  badExample.lsl  compositeTypes.lsl  generics.lsl  literalTypes.lsl  types.lsl
executable/: CMakeLists.txt  main.cpp
libsl-parser/: CMakeLists.txt  LibSL.cpp
libsl-parser/grammar/: LibSLLexer.g4  LibSLParser.g4
libsl-parser/include/: LibSL.h  dll_modifier.h
